// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Blankslate /> Render must match capped() 1`] = `
<div>
  <div
    class=""
  >
    <h3>
      This is a blank slate
    </h3>
    <p>
      Use it to provide information when no dynamic content exists.
    </p>
  </div>
</div>
`;

exports[`<Blankslate /> Render must match cleanBackground() 1`] = `
<div>
  <div
    class="undefined"
  >
    <h3>
      This is a blank slate
    </h3>
    <p>
      Use it to provide information when no dynamic content exists.
    </p>
  </div>
</div>
`;

exports[`<Blankslate /> Render must match large() 1`] = `
<div>
  <div
    class=""
  >
    <h3>
      This is a blank slate
    </h3>
    <p>
      Use it to provide information when no dynamic content exists.
    </p>
  </div>
</div>
`;

exports[`<Blankslate /> Render must match narrow() 1`] = `
<div>
  <div
    class=""
  >
    <h3>
      This is a blank slate
    </h3>
    <p>
      Use it to provide information when no dynamic content exists.
    </p>
  </div>
</div>
`;

exports[`<Blankslate /> Render must match regular() 1`] = `
<div>
  <div
    class=""
  >
    <h3>
      This is a blank slate
    </h3>
    <p>
      Use it to provide information when no dynamic content exists.
    </p>
  </div>
</div>
`;

exports[`<Blankslate /> Render must match spacious() 1`] = `
<div>
  <div
    class=""
  >
    <h3>
      This is a blank slate
    </h3>
    <p>
      Use it to provide information when no dynamic content exists.
    </p>
  </div>
</div>
`;
